[package]
name = "alchemy-rs"
version = "0.2.0"
edition = "2021"
authors = [ "asnared" ]
readme = "README.md"
repository = "https://github.com/abigger87/alchemy-rs/"
license = "MIT"
description = """
Minimal ethers-rs wrappers for the Alchemy API built in pure Rust.
"""
keywords = ["sdk", "alchemy", "api", "rust", "logging"]
exclude = [
    "assets",
    ".env",
    ".env.prod"
]

[dependencies]
async-trait = { version = "0.1.50", default-features = false }
ethers = { version = "0.17.0", features = [ "ws", "rustls" ] }
serde_json = { version = "1.0.64", default-features = false, features = ["raw_value"] }
serde = "1.0.144"
actix-rt = "2.7.0"
soketto = "0.7.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = { default-features = false, features = ["bilock", "std", "unstable"], version = "0.3.1" }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { version = "1.1.2", features = [ "serde" ] }
